--- a/new.html
+++ b/new.html
@@ -13,6 +13,7 @@
         }
         body{
             margin-top: -11rem;
+            overflow-y: hidden;
         }
         p{
             width: fit-content;
