--- a/new.html
+++ b/new.html
@@ -13,7 +13,7 @@
         }
         body{
             margin-top: -11rem;
-            overflow-y: hidden;
+            overflow-x: hidden;
         }
         p{
             width: fit-content;
