--- a/new.html
+++ b/new.html
@@ -207,6 +207,13 @@
             margin-left: 25px;
         }
 
+        @media screen and (max-width: 1000px) {
+            .unsect{
+                width: 100%;
+                display: block;
+            }
+        }
+
 
     </style>
 </head>
