--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Check-Out</title>
     <script src="https://kit.fontawesome.com/43b5c59b64.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="new.css">
 </head>
